--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@headlessui/react": "^2.1.5",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/react": "^2.1.5",
+    "@tanstack/react-query": "^5.55.4",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.55.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
