--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "^5.55.4",
+    "bignumber.js": "^9.1.2",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.55.4",
