--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,40 +1,59 @@
-name: Docker Deposit Calculator
+name: Deploy to DigitalOcean
 
 on:
     push:
         branches:
-            - main # Trigger on push to the main branch
+            - main
 
 jobs:
     build:
         runs-on: ubuntu-latest
 
         steps:
-            # Checkout the code from your repository
-            - name: Checkout repository
+            # Checkout the latest code
+            - name: Checkout code
               uses: actions/checkout@v3
 
-            # Set up Docker in the workflow
+            # Set up Docker Buildx
             - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v2
+              uses: docker/setup-buildx-action@v3
 
-            # Log in to DockerHub
-            - name: Log in to DockerHub
-              uses: docker/login-action@v2
+            # Log in to Docker Hub using secrets
+            - name: Log in to Docker Hub
+              uses: docker/login-action@v3
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
-            # Build the Docker image
-            - name: Build Docker Image
-              run: docker build -t ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }} .
+            # Build and push Docker image to Docker Hub
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v5
+              with:
+                  context: .
+                  push: true
+                  tags: ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
 
-            # Push the Docker image to DockerHub
-            - name: Push Docker Image
-              run: docker push ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }}
+    deploy:
+        needs: build
+        runs-on: ubuntu-latest
 
-            # Optional: Add a tag for "latest"
-            - name: Tag image as "latest"
+        steps:
+            # Set up SSH
+            - name: Install SSH client
+              run: sudo apt-get install openssh-client
+
+            - name: Add SSH key
+              uses: shimataro/ssh-key-action@v2
+              with:
+                  key: ${{ secrets.SSH_PRIVATE_KEY }}
+                  known_hosts: 'digitalocean_droplet_ip_address'
+
+            # Deploy the Docker container to the DigitalOcean droplet
+            - name: Deploy Docker Container
               run: |
-                  docker tag ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
-                  docker push ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                  ssh -o StrictHostKeyChecking=no root@digitalocean_droplet_ip_address << EOF
+                    docker pull ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                    docker stop deposit-calculator || true
+                    docker rm deposit-calculator || true
+                    docker run -d --name deposit-calculator -p 80:80 ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                  EOF
