--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,7 +31,7 @@ jobs:
               with:
                   context: .
                   push: true
-                  tags: ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                  tags: ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }}
 
     deploy:
         needs: build
@@ -52,8 +52,8 @@ jobs:
             - name: Deploy Docker Container
               run: |
                   ssh -o StrictHostKeyChecking=no root@${{ secrets.DROPLET_HOST_ADRESS }} << EOF
-                    docker pull ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                    docker pull ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }}
                     docker stop deposit-calculator || true
                     docker rm deposit-calculator || true
-                    docker run -d --name deposit-calculator -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                    docker run -d --name deposit-calculator -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }}
                   EOF
