--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,7 +31,7 @@ jobs:
               with:
                   context: .
                   push: true
-                  tags: ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:${{ github.sha }}
+                  tags: ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
 
     deploy:
         needs: build
