--- a/package.json
+++ b/package.json
@@ -12,12 +12,20 @@
     "@headlessui/react": "^2.1.5",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@tanstack/react-query": "^5.55.4",
     "bignumber.js": "^9.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.445.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.55.4",
