--- a/package.json
+++ b/package.json
@@ -44,12 +44,10 @@
   },
   "lint-staged": {
     "*.ts": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "*.tsx": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
