--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,13 +25,26 @@ jobs:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
-            # Build and push Docker image to Docker Hub
-            - name: Build and push Docker image
+            # - name: Build images
+            #   run: |
+            #       docker build -t nextjs-app .
+            #       docker build -t nginx-app -t nginx:latest . -f nginx/Dockerfile
+
+            # Build and push App Docker images to Docker Hub
+            - name: Build and push App Docker image
               uses: docker/build-push-action@v5
               with:
                   context: .
                   push: true
                   tags: ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+
+           # Build and push App Docker images to Docker Hub
+            - name: Build and push Nginx Docker image
+              uses: docker/build-push-action@v5
+              with:
+                  context: .
+                  push: true
+                  tags: ${{ secrets.DOCKER_USERNAME }}/nginx:latest
 
     deploy:
         needs: build
@@ -60,5 +73,5 @@ jobs:
                       docker rm deposit-calculator
                     fi
 
-                    docker run -d --name deposit-calculator -p 80:3000 ${{ secrets.DOCKER_USERNAME }}/deposit-calculator:latest
+                    docker-compose up
                   EOF
