--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.445.0",
     "next": "14.2.7",
+    "nginx": "^1.0.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
