--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 version: '3'
+
 services:
   nextjs:
-    build: .
-    container_name: nextjs
+    build:
+      context: .
+      target: runner
+    restart: always
+    networks:
+      - app-network
 
   nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports: 
+    build:
+      context: .
+      target: nginx
+    restart: always
+    ports:
+      - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./certs:/certs
     depends_on:
       - nextjs
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
