--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,34 @@
+worker_processes auto;
+
 events {
     worker_connections 1024;
 }
 
 http {
+    upstream nextjs_upstream {
+        server 127.0.0.1:3000;
+    }
+
     server {
-        listen 443 ssl;
-        server_name dcalc;
+        listen 80;
+        server_name example.com;
+        return 301 https://$server_name$request_uri;
+    }
 
-        ssl_certificate /certs/dcalc.crt;
-        ssl_certificate_key /certs/dcalc.key;
+    server {
+        listen 443 ssl http2;
+        server_name example.com;
 
-        # SSL settings
+        ssl_certificate /etc/nginx/ssl/dcalc.cert;
+        ssl_certificate_key /etc/nginx/ssl/dcalc.key;
+
+        # SSL settings (you may want to adjust these based on your requirements)
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
         location / {
-            proxy_pass http://nextjs:3000;
+            proxy_pass http://nextjs_upstream;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
