--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,8 @@ http {
         listen 443 ssl http2;
         server_name example.com;
 
-        ssl_certificate /etc/nginx/ssl/dcalc.cert;
-        ssl_certificate_key /etc/nginx/ssl/dcalc.key;
+        ssl_certificate /ssl/dcalc.ert;
+        ssl_certificate_key /ssl/dcalc.key;
 
         # SSL settings (you may want to adjust these based on your requirements)
         ssl_protocols TLSv1.2 TLSv1.3;
