--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -26,7 +26,7 @@ CMD ["node", "server.js"]
 FROM nginx:alpine AS nginx
 
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY ssl/dcalc.cert /etc/nginx/ssl/dcalc.crt
+COPY ssl/dcalc.crt /etc/nginx/ssl/dcalc.crt
 COPY ssl/dcalc.key /etc/nginx/ssl/dcalc.key
 
 EXPOSE 80 443
