--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,7 +44,7 @@ jobs:
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.DROPLET_HOST_ADRESS }}
-        username: ${{ secrets.DROPLET_USER }}
+        username: ${{ secrets.DROPLET_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           git pull origin main
