--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,10 +3,10 @@ FROM node:18-alpine AS builder
 WORKDIR /app
 
 COPY package.json package-lock.json ./
-RUN npm ci
+RUN yarn
 
 COPY . .
-RUN npm run build
+RUN yarn run build
 
 FROM node:18-alpine AS runner
 
