--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,50 +5,42 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Build Docker image
-      run: docker build -f Dockerfile.prod -t dcalc:${GITHUB_SHA} .
-      
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        
-    - name: Push image to Docker Hub
+    - name: Login to the Docker hub
+      id: docker-hub
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        docker tag dcalc:${GITHUB_SHA} ${{ secrets.DOCKER_USERNAME }}/dcalc:${GITHUB_SHA}
-        docker push ${{ secrets.DOCKER_USERNAME }}/dcalc:${GITHUB_SHA}
+        docker login -u $username -p $password 
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    - name: Build docker image
+      id: build-docker-image
+      run: |
+        docker build . -f Dockerfile -t vchecherynda/nextjs:${{ github.sha }}
+
+    - name: Push docker image
+      id: push-docker-image
+      run: |
+        docker push vchecherynda/nextjs:${{ github.sha }}
     
-    
-    steps:
-    - name: Deploy to Digital Ocean droplet
-      uses: appleboy/ssh-action@master
+    - name: Install SSH key
+      uses: shimataro/ssh-key-action@v2
       with:
-        host: ${{ secrets.DROPLET_HOST_ADRESS }}
-        username: ${{ secrets.DROPLET_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/dcalc:${GITHUB_SHA}
+        known_hosts: ${{ secrets.DROPLET_HOST_ADRESS }}
+    
+    - name: Deploy to Droplet
+      env:
+        DROPLET_IP: ${{ secrets.DROPLET_HOST_ADRESS }}
+      run: |
+        ssh root@$DROPLET_IP << 'ENDSSH'
+          docker pull vchecherynda/nextjs:${{ github.sha }}
+          docker stop nextjs-app || true
+          docker rm nextjs-app || true
           docker-compose up -d
-        debug: true
-
-
+        ENDSSH
