--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,15 @@
+version: '3'
 services:
   nextjs:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-      target: runner
-    restart: always
-    networks:
-      - app-network
-
+    build: .
+    container_name: nextjs
+  
   nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-      target: nginx
-    restart: always
+    image: nginx:alpine
+    container_name: nginx
     ports:
       - "80:80"
-      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - nextjs
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
