--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Login to the Docker hub
       id: docker-hub
       env:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        docker login -u $username -p $password 
+        docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
 
     - name: Build docker image
       id: build-docker-image
@@ -38,9 +38,9 @@ jobs:
       env:
         DROPLET_IP: ${{ secrets.DROPLET_HOST_ADRESS }}
       run: |
-        ssh root@$DROPLET_IP << 'ENDSSH'
+        ssh root@$DROPLET_IP << 'EOT'
           docker pull vchecherynda/nextjs:${{ github.sha }}
-          docker stop nextjs-app || true
-          docker rm nextjs-app || true
+          docker stop nextjs || true
+          docker rm nextjs || true
           docker-compose up -d
-        ENDSSH
+        EOT
