--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ events {
 http {
     server {
         listen 80;
-        server_name localhost;
+        server_name 204.48.27.200;
 
         location / {
             proxy_pass http://nextjs:3000;
