Update config and cert

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,17 @@ events {
 }
 
 http {
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+
     server {
-        listen 80;
+        listen 443;
         server_name 204.48.27.200;
+        keepalive_timeout   70;
+
+        ssl_certificate     /etc/nginx/ssl/dcalc.crt;
+        ssl_certificate_key /etc/nginx/ssl/dcalc.key;;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
         location / {
             proxy_pass http://nextjs:3000;
