--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,7 +33,15 @@ jobs:
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         known_hosts: ${{ secrets.DROPLET_HOST_ADRESS }}
-    
+
+    - name: Copy config files to Droplet
+      env:
+        DROPLET_IP: ${{ secrets.DROPLET_HOST_ADRESS }}
+      run: |
+        rsync -r -e "ssh bastion ssh" ./nginx.conf /etc/nginx/nginx.conf
+        rsync -r -e "ssh bastion ssh" ./ssl/dcalc.crt /etc/nginx/ssl/dcalc.cert
+        rsync -r -e "ssh bastion ssh" ./ssl/dcalc.key /etc/nginx/ssl/dcalc.key
+
     - name: Deploy to Droplet
       env:
         DROPLET_IP: ${{ secrets.DROPLET_HOST_ADRESS }}
