--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
-version: '3'
 services:
   nextjs:
     image: vchecherynda/nextjs:latest
     container_name: nextjs
     ports:
       - "3000:80"
-    environment:
-      - NODE_ENV=production
-    depends_on:
-      - nginx
   
   nginx:
     image: nginx:alpine
     container_name: nginx
     ports:
-      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./ssl/dcalc.crt:/etc/nginx/ssl/dcalc.cert
+      - ./ssl/dcalc.key:/etc/nginx/ssl/dcalc.key
     depends_on:
       - nextjs
