--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
         keepalive_timeout   70;
 
         ssl_certificate     /etc/nginx/ssl/dcalc.crt;
-        ssl_certificate_key /etc/nginx/ssl/dcalc.key;;
+        ssl_certificate_key /etc/nginx/ssl/dcalc.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
         location / {
