--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl/dcalc.crt:/etc/nginx/ssl/dcalc.cert
-      - ./ssl/dcalc.key:/etc/nginx/ssl/dcalc.key
+      - ./ssl/dcalc.crt:/etc/ssl/dcalc.crt
+      - ./ssl/dcalc.key:/etc/ssl/dcalc.key
     depends_on:
       - nextjs
