Update config file

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
     ssl_session_timeout 10m;
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name 204.48.27.200;
         keepalive_timeout   70;
 
