--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,12 +27,18 @@ jobs:
       id: push-docker-image
       run: |
         docker push vchecherynda/nextjs:latest
-    
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         known_hosts: ${{ secrets.DROPLET_HOST_ADRESS }}
+
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
 
     - name: Copy config files to Droplet
       env:
