--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,10 +27,7 @@ jobs:
       id: push-docker-image
       run: |
         docker push vchecherynda/nextjs:latest
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
+    
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
@@ -38,7 +35,7 @@ jobs:
         known_hosts: ${{ secrets.DROPLET_HOST_ADRESS }}
 
     - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.DEPLOY_HOST }} >> ~/.ssh/known_hosts
+      run: ssh-keyscan -H ${{ secrets.DROPLET_HOST_ADRESS }} >> ~/.ssh/known_hosts
 
     - name: Copy config files to Droplet
       env:
