--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,9 +41,10 @@ jobs:
       env:
         DROPLET_IP: ${{ secrets.DROPLET_HOST_ADRESS }}
       run: |
-        rsync -avz -e ssh ./nginx.conf root@$DROPLET_IP:/etc/nginx/nginx.conf
-        rsync -avz -e ssh ./ssl/dcalc.crt root@$DROPLET_IP:/etc/nginx/ssl/dcalc.cert
-        rsync -avz -e ssh ./ssl/dcalc.key root@$DROPLET_IP:/etc/nginx/ssl/dcalc.key
+        ssh root@$DROPLET_IP 'mkdir -p /ssl'
+        rsync -avz -e ssh ./nginx.conf root@$DROPLET_IP:/nginx.conf
+        rsync -avz -e ssh ./ssl/dcalc.crt root@$DROPLET_IP:/ssl/dcalc.cert
+        rsync -avz -e ssh ./ssl/dcalc.key root@$DROPLET_IP:/ssl/dcalc.key
 
     - name: Deploy to Droplet
       env:
