--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -27,7 +27,10 @@ jobs:
       id: push-docker-image
       run: |
         docker push vchecherynda/nextjs:latest
-    
+  
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
     - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
