--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,8 +27,9 @@ jobs:
       id: push-docker-image
       run: |
         docker push vchecherynda/nextjs:latest
-  
+
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Install SSH key
