--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,6 +52,7 @@ jobs:
       run: |
         ssh root@$DROPLET_IP 'mkdir -p /ssl'
         rsync -avz -e ssh ./nginx.conf root@$DROPLET_IP:/nginx.conf
+        rsync -avz -e ssh ./docker-compose.yml root@$DROPLET_IP:/docker-compose.yml
         rsync -avz -e ssh ./ssl/dcalc.crt root@$DROPLET_IP:/ssl/dcalc.cert
         rsync -avz -e ssh ./ssl/dcalc.key root@$DROPLET_IP:/ssl/dcalc.key
 
