--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,10 +51,10 @@ jobs:
         DROPLET_IP: ${{ secrets.DROPLET_HOST_ADRESS }}
       run: |
         ssh root@$DROPLET_IP 'mkdir -p /ssl'
-        rsync -avz -e ssh ./nginx.conf root@$DROPLET_IP:./nginx.conf
-        rsync -avz -e ssh ./docker-compose.yml root@$DROPLET_IP:./docker-compose.yml
-        rsync -avz -e ssh ./ssl/dcalc.crt root@$DROPLET_IP:./ssl/dcalc.cert
-        rsync -avz -e ssh ./ssl/dcalc.key root@$DROPLET_IP:./ssl/dcalc.key
+        rsync -avz -e ssh ./nginx.conf root@$DROPLET_IP:/nginx.conf
+        rsync -avz -e ssh ./docker-compose.yml root@$DROPLET_IP:/docker-compose.yml
+        rsync -avz -e ssh ./ssl/dcalc.crt root@$DROPLET_IP:/ssl/dcalc.cert
+        rsync -avz -e ssh ./ssl/dcalc.key root@$DROPLET_IP:/ssl/dcalc.key
 
     - name: Deploy to Droplet
       env:
